# ichor-bot

./: .gitignore  README.md  db.json  encrypt.py  gacha.py  genshin_fun.py  genshin_stats.py  inventory.py  keep_alive.py  lyricsgame.py  main.py  misc.py  music.py  music2.py  music3.py  myAnimeList.json  otaku.py  pyproject.toml  supabase_db.py  sys_info.py  tictactoegame.py  tmp.txt
Schedules/: AiringList.txt  schedule.json
lyrics_game/: Lyrics.py  Player.py
lyrics_game/lyrics/: Hati-Hati di Jalan.txt  Heat Waves.txt  Light Switch.txt
tictactoe_game/: __init__.py  minimax.py  tictactoe.py
